--- a/P005445.opf/meta.yml
+++ b/P005445.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005445
+id: P005445
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS15812
   title: རྟ་ཚག་རྗེ་དྲུང་ངག་དབང་དཔལ་ལྡན་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་རྣམ་ཐར།
-  volume: ''
   author: ''
+  volumes: {}
