--- a/P005445.opf/layers/v001/Pagination.yml
+++ b/P005445.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e84217ea00fa47d4acb631ac33f6967b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   676b3e115d474853ad4968296acf1fc1:
