--- a/P005445.opf/meta.yml
+++ b/P005445.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005445
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W8LS15812
   title: རྟ་ཚག་རྗེ་དྲུང་ངག་དབང་དཔལ་ལྡན་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་རྣམ་ཐར།
